2.26.0 (2025-04-02)
-----------------------------
* Radar Widget
  - Add "show_overlap_indicator_in_cone_style" option (optional), which shows overlap indicator in "cone style" instead of "boundary style".
  - Add "overlap_cone_angle" option, which sets cone display angle in degrees. This option does not affect overlap detection range.
  - Renamed "overlap_detection_range_multiplier" option to "overlap_nearby_range_multiplier", which sets nearby vehicle overlap detection range multiplier.
    A value of "5" would result a 5-vehicle-wide detection range. Default is "5" vehicle-wide.
  - Add "overlap_critical_range_multiplier" option, which sets nearby vehicle critical overlap detection range multiplier. Default is "1" vehicle-wide.
  - Add "show_angle_mark" and angle mark style options, which show angle mark (fixed 45 degrees) on radar background.
  - Fixed radar circle background that was incorrectly displayed on top of overlap indicators.

* Relative, Rivals, Standings Widget
  - Add "show_delta_laptime" option for Rivals & Standings Widget (requested by user "oljemace"), which shows lap time difference (delta) between player and opponents from most recent laps.
    A green color (default) delta indicates that player's recent lap time is faster than opponent, while orange color delta indicates the opposite.
    Number of delta lap time display can be set with "number_of_delta_laptime" option, minimum number is limited to 2, maximum is limited to 5.
    The default layout order shows delta lap time records from right side column (most recent lap) to left. Enable "show_inverted_delta_laptime_layout" option to invert the layout.
  - Add "show_position_change" option (requested by user "bongio94"), which shows overall driver position change relative to overall qualification position.
  - Add "show_position_change_in_class" option, which shows driver position change in class instead of overall. This option is enabled by default.