@@ -27,8 +27,9 @@ GLOBAL_DEFAULT = {
         "minimize_to_tray": True,
         "remember_position": True,
         "remember_size": True,
-        "show_confirmation_for_batch_toggle": True,
+        "enable_high_dpi_scaling": False,
         "enable_auto_load_preset": False,
+        "show_confirmation_for_batch_toggle": True,
         "grid_move_size": 8,
         "minimum_update_interval": 10,
         "maximum_saving_attempts": 10,
